<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-69dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginTop="10dp"
                android:text="@string/username"
                android:textSize="26sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/settings" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="100dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@color/black"
                    android:src="@drawable/doggie" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:text="@string/_3431"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:text="@string/_6560"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:text="@string/_217"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:text="@string/posts"
                        android:textColor="@color/gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:text="@string/followers"
                        android:textColor="@color/gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/following"
                        android:textColor="@color/gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginStart="45dp"
                        android:backgroundTint="@color/light_gray"
                        android:text="@string/edit_profile"
                        android:textColor="@color/black"

                        />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/your_name_nyour_bio_goes_here_nand_here_too"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/yoursite_com_n"
            android:textColor="@color/dark_blue" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

<!--            <LinearLayout-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal">-->

<!--               <ImageView-->
<!--                   android:layout_width="30dp"-->
<!--                   android:layout_height="30dp"-->
<!--                   android:src="@drawable/icon1"-->
<!--                   android:layout_marginStart="35dp"-->
<!--                   android:layout_marginEnd="55dp"-->
<!--                   />-->
<!--                <ImageView-->
<!--                    android:layout_width="30dp"-->
<!--                    android:layout_height="30dp"-->
<!--                    android:src="@drawable/icon2"-->
<!--                    android:layout_marginEnd="55dp"-->
<!--                    />-->
<!--                <ImageView-->
<!--                    android:layout_width="30dp"-->
<!--                    android:layout_height="30dp"-->
<!--                    android:src="@drawable/icon3"-->
<!--                    android:layout_marginEnd="55dp"-->
<!--                    />-->
<!--                <ImageView-->
<!--                    android:layout_width="30dp"-->
<!--                    android:layout_height="30dp"-->
<!--                    android:src="@drawable/icon4"-->
<!--                    android:layout_marginBottom="10dp"/>-->
<!--            </LinearLayout>-->

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/icon1"
                    />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/icon2"
                    />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/icon3"
                    />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/icon4"
                    />
            </com.google.android.material.tabs.TabLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_margin="2dp"
                    android:src="@drawable/img1" />

                <ImageView
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_margin="2dp"
                    android:src="@drawable/img2" />

                <ImageView
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_margin="2dp"
                    android:src="@drawable/img3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_margin="2dp"
                    android:src="@drawable/img5" />

                <ImageView
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_margin="2dp"
                    android:src="@drawable/img6"

                    />

                <ImageView
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:src="@drawable/img7" />
            </LinearLayout>


        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="100dp"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/home"
                />

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/search"
                />

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/camera"
                />

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/heart_icon"
                />

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/account"
                />
        </com.google.android.material.tabs.TabLayout>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>